# gl_tryouts

./: .clang-format  .gitignore  .gitmodules  App.cpp  App.h  AppBase.cpp  AppBase.h  CMakeLists.txt  Camera.cpp  Camera.h  KTX_Loader.cpp  KTX_Loader.h  LICENSE  Model.cpp  Model.h  Node.h  Scene.cpp  Scene.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h  Thing.cpp  Thing.h  conanfile.txt  fragmentShader.frag  justfile  main.cpp  readme.md  shaderLoader.cpp  shaderLoader.h  vcpkg.json
shaders/: fragmentShader.frag  vertexShader.vert
textures/: Konyaalti.ktx
